--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  min-width: 360px;
+  scroll-behavior: smooth;
+}
+
+#__next {
+  @apply bg-gray-50 dark:bg-gray-900;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#skip {
+  scroll-margin-top: 1.125rem;
+}
+
+.text-decoration-underline {
+  text-underline-offset: 1px;
+}
